--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       </div>
       <br>
       <div class='avatar-name'>
-          <h2>Janice Han</h2>
+          <h2>Tweeter User</h2>
       </div>
   </header>
     <!-- Page-specific (main) content here -->
