responsive design added

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Meta Information -->
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-    
+
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
@@ -35,10 +35,11 @@
       <span>tweeter</span>
       <div class='right-of-nav'>
         <p style='margin-bottom: 3px'>
-        <b>Write</b> a new tweet</p><i class="fas fa-angle-double-down" style='color: red'></i>
-      </div>
-    </nav>
-    <header>
+          <b>Write</b> a new tweet</p><i class="fas fa-angle-double-down" style='color: red'></i>
+        </div>
+      </nav>
+  <div class='design1'>
+    <header class='main-header'>
       <div class='avatar-image'>
           <img src="/images/profile-hex.png"> 
       </div>
@@ -46,8 +47,10 @@
       <div class='avatar-name'>
           <h2>Tweeter User</h2>
       </div>
-  </header>
+    </header>
+    <!-- </div> -->
     <!-- Page-specific (main) content here -->
+    <!-- <div class='design2'> -->
     <main class="container">
       <section class='new-tweet'>
        <div class='error-hidden'></div>
@@ -65,6 +68,7 @@
         <section id="tweet-container"></section>
 
     </main>
+    </div>
     <footer></footer>
   </body>
 </html>
