--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,6 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-
   </head>
 
   <body>
@@ -34,40 +33,37 @@
     <nav>
       <span>tweeter</span>
       <div class='right-of-nav'>
-        <p style='margin-bottom: 3px'>
-          <b>Write</b> a new tweet</p><i class="fas fa-angle-double-down" style='color: red'></i>
+        <p><b>Write</b> a new tweet</p><i class="fas fa-angle-double-down"></i>
+      </div>
+    </nav>
+    <div class='design1'>
+      <header class='main-header'>
+        <div class='avatar-image'>
+            <img src="/images/profile-hex.png"> 
         </div>
-      </nav>
-  <div class='design1'>
-    <header class='main-header'>
-      <div class='avatar-image'>
-          <img src="/images/profile-hex.png"> 
-      </div>
-      <br>
-      <div class='avatar-name'>
+        <br>
+        <div class='avatar-name'>
           <h2>Tweeter User</h2>
-      </div>
-    </header>
-    <!-- </div> -->
-    <!-- Page-specific (main) content here -->
-    <!-- <div class='design2'> -->
-    <main class="container">
-      <section class='new-tweet'>
-       <div class='error-hidden'></div>
-        <form id='tweet-form'> <!--form with no action and method will automatically makes a GET request to a current page.
-          <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>-->
-          <textarea name="text" id="tweet-text" placeholder="What are you humming about?" onfocus="this.placeholder = ''" onblur="this.placeholder='What are you humming about?'"></textarea></textarea>
-          <div id='tweet-btn-and-counter'>
-            <button type="submit" id=tweet-btn>Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
-          </div>
-        </form>
+        </div>
+      </header>
+      <!-- Page-specific (main) content here -->
+      <main class="container">
+        <section class='new-tweet'>
+          <div class='error-hidden'></div>
+          <form id='tweet-form'> <!--form with no action and method will automatically makes a GET request to a current page-->
+            <!-- <label for="tweet-text">What are you humming about?</label>
+            <textarea name="text" id="tweet-text"></textarea>-->
+            <textarea name="text" id="tweet-text" placeholder="What are you humming about?" onfocus="this.placeholder = ''" onblur="this.placeholder='What are you humming about?'"></textarea></textarea>
+            <div id='tweet-btn-and-counter'>
+              <button type="submit" id=tweet-btn>Tweet</button>
+              <output name="counter" class="counter" for="tweet-text">140</output>
+            </div>
+          </form>
         </section>
-
-        <section id="tweet-container"></section>
-
-    </main>
+        <section id="tweet-container">
+          <!-- User input comes here -->
+        </section>
+      </main>
     </div>
     <footer></footer>
   </body>
