--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
   <head>
     <!-- Meta Information -->
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-
     <title>Tweeter - Home Page</title>
-
+    
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,7 +49,7 @@
       <main class="container">
         <section class='new-tweet'>
           <div class='error-hidden'></div>
-          <form id='tweet-form'> <!--form with no action and method will automatically makes a GET request to a current page-->
+          <form id='tweet-form'> <!--form with no action and method automatically makes a GET request to a current page-->
             <textarea name="text" id="tweet-text" placeholder="What are you humming about?" onfocus="this.placeholder = ''" onblur="this.placeholder='What are you humming about?'"></textarea></textarea>
             <div id='tweet-btn-and-counter'>
               <button type="submit" id=tweet-btn>Tweet</button>
